--- a/public/.htaccess
+++ b/public/.htaccess
@@ -18,5 +18,6 @@ RewriteCond %{REQUEST_FILENAME} !-d     #Is directory.
 # Leite alle anderen Anfragen auf die Datei index.php um.
 RewriteRule ^.*$ index.php [PT,L]       #PT = pass trough (als URI behandeln)  L = last (letzer Rewrite)
 
+#Fore more information see:
 #http://httpd.apache.org/docs/current/mod/mod_rewrite.html
 #https://httpd.apache.org/docs/2.4/rewrite/flags.html
